--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,7 @@ body {
 /* Image */
 .about-image img {
     width: 450px;
+    height: 550px;
     border-radius: 12px;
     box-shadow: 0 8px 18px rgba(0,0,0,0.15);
 }
@@ -254,6 +255,7 @@ body {
 
 .service-img-card {
     width: 32%;
+    height: 400px;
     background: white;
     border-radius: 14px;
     overflow: hidden;
