fixe logo isuue

--- a/aboutus.css
+++ b/aboutus.css
@@ -62,9 +62,12 @@ body{font-family:var(--ff);color:var(--text);}
 .intro-left p{color:var(--muted);line-height:1.6;margin-bottom:12px}
 
 .intro-right img{
-  width:500px;border-radius:22px;
+  width:500px;
+  height: 400px;
+  border-radius:22px;
   box-shadow:0 18px 34px rgba(0,0,0,0.08);
 }
+
 
 /* API INFOGRAPHIC */
 .api-section{padding:50px 0;text-align:center}
@@ -87,7 +90,8 @@ body{font-family:var(--ff);color:var(--text);}
 /* DEV IMAGE */
 .dev-image-wrap{text-align:center;padding:40px 0}
 .dev-image-wrap img{
-  width:80%;max-width:820px;border-radius:12px;
+  width: 900px;
+  height: 600px;
   box-shadow:0 16px 40px rgba(0,0,0,0.08);
 }
 
